--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -16,8 +16,7 @@ html {
   justify-content: flex-start;
   /* min-width: 100%; */
   /* min-height: 100vh; */
-  /*margin: 0;*/
-  margin: 10%;
+  margin: 0;
   /* background-color: #ffffff; */
 }
 
@@ -144,6 +143,13 @@ h1 {
   font-size: 9px;
   padding-top: 1%;
   padding-bottom: 1%;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.content-container {
+  /*padding-top: 1%;
+  padding-bottom: 1%;*/
   padding-left: 10%;
   padding-right: 10%;
 }
