--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -39,7 +39,7 @@ html {
 }
 
 .team-container {
-  /*width: 400px;*/
+  width: 400px;
   text-align: left;
   padding-bottom: 30px;
   padding-top: 10px;
@@ -86,7 +86,7 @@ h1 {
   text-align: left;
   align-items: center;
   justify-content: center;
-  /*width: 400px;*/
+  width: 400px;
   gap: 40px;
 }
 
@@ -120,7 +120,7 @@ h1 {
   /*margin-top: 150px;*/
   margin-top: 30px;
   display: flex;
-  /*width: 400px;*/
+  width: 400px;
   text-align: left;
   flex-direction: column;
   /* align-items: center; */
