--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -28,7 +28,8 @@ html {
   width: 100%;
   top: 0;
   left: 0;
-  justify-content: center;
+  /*justify-content: center;*/
+  justify-content: space-between;
   margin: 0;
   /* gap: 10px; */
   /* margin-bottom: 50vh; */
