--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -49,7 +49,7 @@ html {
 .about-title {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-self: center;
   background-image: linear-gradient(to right, #302144, #000000);
   align-items: stretch;
