--- a/satellite_experience/assets/css/about.css
+++ b/satellite_experience/assets/css/about.css
@@ -77,7 +77,9 @@ h1 {
   padding: 30px;
   align-self: center;
   color: white;
-  margin-left: 6%;
+  /*margin-left: 6%;*/
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .team-member {
