--- a/satellite_experience/assets/css/styles.css
+++ b/satellite_experience/assets/css/styles.css
@@ -449,9 +449,16 @@ body {
 }
 
 .invisibuttons {
+  width: 100%;
+  margin-bottom: 1px;
+  margin-top: 10px;
+  padding: 15px 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
   /*background: transparent;*/
   /*border: none;*/
-  color: red;
+  color: #FFFFFF;
 }
 
 #default-mode,
