--- a/satellite_experience/assets/css/styles.css
+++ b/satellite_experience/assets/css/styles.css
@@ -450,7 +450,11 @@ body {
 
 .invisibuttons {
   width: 100%;
-  /*border-radius: 5px;*/
+  text-align: left;
+  margin-bottom: 1px;
+  margin-top: 10px;
+  padding: 15px 10px;
+  border-radius: 5px;
   display: flex;
   justify-content: space-between;
   /*background: transparent;*/
