--- a/satellite_experience/assets/css/styles.css
+++ b/satellite_experience/assets/css/styles.css
@@ -449,19 +449,18 @@ body {
 }
 
 .invisibuttons {
-  background-color:#d33;
-  box-sizing: border-box;
+  display: block;
   width: 100%;
-  /*width: 100%;*/
+  background-color: rgba(255, 255, 255, 0.05);
   /*text-align: left;*/
-  /*margin-bottom: 1px;*/
-  /*margin-top: 10px;*/
-  /*padding: 15px 10px;*/
-  /*border-radius: 5px;*/
+  margin-bottom: 1px;
+  margin-top: 10px;
+  padding: 15px 10px;
+  border-radius: 5px;
   /*display: flex;*/
   /*justify-content: space-between;*/
   /*background: transparent;*/
-  /*border: none;*/
+  border: none;
   /*color: #FFFFFF;*/
   /*z-index: 50;*/
 }
