--- a/satellite_experience/assets/css/styles.css
+++ b/satellite_experience/assets/css/styles.css
@@ -455,18 +455,10 @@ body {
   left: 0;
   display: block;
   width: 100%;
-  /*background-color: rgba(255, 255, 255, 0.05);*/
-  /*text-align: left;*/
-  margin-bottom: 1px;
-  margin-top: 10px;
   padding: 15px 10px;
   border-radius: 5px;
-  /*display: flex;*/
-  /*justify-content: space-between;*/
-  /*background: transparent;*/
+  background: transparent;
   border: none;
-  color: #FFFFFF;
-  /*z-index: 50;*/
 }
 
 #default-mode,
